--- a/Portal/media/skins/Light/main.css
+++ b/Portal/media/skins/Light/main.css
@@ -986,7 +986,7 @@ span.button
 .editor .toolbar
 {
 	background-color: #CCD1FF;
-	padding: 2px;
+	padding:25px 2px 2px 2px;
 	width: 100%;
 	height: 62px;
 }
