--- a/trunk/Portal/media/skins/Light/steel/steel.css
+++ b/trunk/Portal/media/skins/Light/steel/steel.css
@@ -46,7 +46,7 @@ caption{margin-bottom:.5em;text-align:center;}
 p,fieldset,table,pre{margin-bottom:1em;}
 input[type=text],input[type=password],textarea{width:12.25em;*width:11.9em;}
 
-input[type=checkbox]{margin-right:3px;}
+input[type=checkbox]{margin-right:3px;vertical-align:sub;}
 
 
 
