--- a/trunk/Portal/media/skins/Light/main.css
+++ b/trunk/Portal/media/skins/Light/main.css
@@ -52,7 +52,7 @@ ul.list li, ol.list li, ul li
 {
 	margin-left: 15px;
 	list-style-type: disc;
-	list-style-position: inside;
+	list-style-position:outside;
 }
 
 .tree ul, .tab-header ul, .sliding-menu ul
