--- a/trunk/Portal/media/skins/Light/main.css
+++ b/trunk/Portal/media/skins/Light/main.css
@@ -652,14 +652,16 @@ div.edit input, div.edit textarea
 
 .candy
 {
-	width: 250px;
-	height: 210px;
+	width: 150px;
+	height: 110px;
 	margin: 10px;
 	padding: 15px;
 	float: left;
 	border: dashed 1px #999;
 	cursor: pointer;
 	text-align: center;
+	position:relative;
+	overflow:hidden;
 }
 
 .menuSearch
@@ -1496,7 +1498,15 @@ span.buttonFlat
 	background-position: -256px 0px;
 }
 
+.not-installed
+{
+	background-color:Green;
+}
 
+.already-installed
+{
+	background-color:Gray;
+}
 
 
 
