--- a/Portal/media/skins/Light/steel/steel.css
+++ b/Portal/media/skins/Light/steel/steel.css
@@ -94,7 +94,7 @@ http://ra-ajax.org
 {
 	width:1000%;
 	background: transparent url(window-h-sprite.png) repeat 0 0;
-	height:32px;
+	height:35px;
 	overflow:hidden;
 	margin-top:-2px;
 }
@@ -102,14 +102,14 @@ http://ra-ajax.org
 .bread-crumb
 {
 	width:100%;
-	height:32px;
+	height:35px;
 	overflow:auto;
 	margin-top:-3px;
 }
 
 .bread-crumb .bread-item-left
 {
-	height:22px;
+	height:25px;
 	margin-bottom:5px;
 	margin-left:-16px;
 	margin-top:5px;
@@ -117,23 +117,23 @@ http://ra-ajax.org
 	float:left;
 	display:block;
 	font-size:11px;
-	background:url('bread-crumb.png') no-repeat 0 -66px;
+	background:url('bread-crumb.png') no-repeat 0 -75px;
 }
 
 .bread-crumb .bread-item-right
 {
-	height:22px;
+	height:25px;
 	display:block;
 	padding-right:16px;
-	background:url('bread-crumb.png') no-repeat right -44px;
+	background:url('bread-crumb.png') no-repeat right -50px;
 }
 
 .bread-crumb .bread-item-center
 {
 	height:14px;
 	display:block;
-	background:url('bread-crumb.png') repeat-x 0 -22px;
-	padding:4px;
+	background:url('bread-crumb.png') repeat-x 0 -25px;
+	padding:6px 4px 5px 4px;
 }
 
 .bread-crumb .bread-item-left:hover
@@ -144,7 +144,7 @@ http://ra-ajax.org
 
 .bread-crumb .bread-item-first
 {
-	padding-left:2px;
+	padding-left:16px;
 	margin-bottom:5px;
 	margin-left:16px;
 	margin-top:5px;
@@ -159,7 +159,7 @@ http://ra-ajax.org
 
 .bread-crumb .bread-item-first .bread-item-center
 {
-	width:16px;
+	width:3px;
 }
 
 .bread-crumb .bread-item-first .sliding-bread-home
@@ -169,7 +169,7 @@ http://ra-ajax.org
 	height:22px;
 	display:block;
 	position:absolute;
-	top:3px;
+	top:5px;
 	left:12px;
 }
 
@@ -185,7 +185,7 @@ http://ra-ajax.org
 
 .bread-crumb .bread-item-last .bread-item-right
 {
-	background:url('bread-crumb.png') no-repeat right -88px;
+	background:url('bread-crumb.png') no-repeat right -100px;
 }
 
 .bread-crumb .bread-item-last:hover
