--- a/trunk/Portal/media/skins/Light/portalSkins/portalSkins.css
+++ b/trunk/Portal/media/skins/Light/portalSkins/portalSkins.css
@@ -54,7 +54,7 @@
 {
 	bottom: auto;
 	display: block;
-	background-color: #86d4ff;
+	background-color: #cfecff;
 	margin-left:-20px;
 	margin-right:-20px;
 }
